# syncdiff

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  Session.vim  build.sh  configure  dirTesting.sh  test.txt  test2.txt  vim
include/: conflictfile.hpp  file.hpp  parser.hpp
src/: conflictFile.cpp  file.cpp  main.cpp  parser.cpp
test/: test.cpp
